--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
+  position: relative;
   text-align: center;
   padding: 40px;
 }
@@ -72,4 +72,20 @@ button:hover {
   margin-top: 20px;
   font-weight: 500;
   color: #5e548e;
+}
+
+.decor {
+  position: absolute;
+  width: 80px;
+  pointer-events: none;
+}
+
+.top-left {
+  top: 40px;
+  left: 40px;
+}
+
+.bottom-right {
+  bottom: 40px;
+  right: 40px;
 }
