--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,18 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  font-family: 'Poppins', sans-serif;
+  overflow: hidden;
+}
+
+.viewport {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -34,15 +49,15 @@ body {
 
 /* TEXTO */
 h1 {
-  font-size: 2.5rem;
+  font-size: 3rem;
   color: #5e548e;
   margin-bottom: 16px;
 }
 
 p {
-  font-size: 1.1rem;
+  font-size: 1.3rem;
   color: #6d6875;
-  max-width: 500px;
+  max-width: 600px;
 }
 
 /* BOTONES */
@@ -52,7 +67,8 @@ button {
   border: none;
   border-radius: 999px;
   padding: 14px 28px;
-  font-size: 1rem;
+  font-size: 1.1rem;
+  border-radius: 30px;
   cursor: pointer;
   color: #3c096c;
 
