--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,7 @@ img {
 
 .slides {
   display: flex;
-  width: 400vw; /* 3 slides */
+  width: 500vw; /* 3 slides */
   height: 100vh;
   transition: transform 0.9s cubic-bezier(0.4, 0.0, 0.2, 1);
 }
@@ -211,7 +211,7 @@ html, body {
   background: #fff1e6;
   border-radius: 24px;
   padding: 24px;
-
+  flex-direction: column; 
   display: flex;
   align-items: center;
   justify-content: center;
@@ -224,3 +224,8 @@ html, body {
   overflow: hidden;
 }
 
+.final-content img {
+  width: 180px;
+  max-width: 60vw;
+  border-radius: 16px;
+}
